Implemented scheduler for sending digest

--- a/Code/src/main/resources/email-templates/new-arrivals.vm
+++ b/Code/src/main/resources/email-templates/new-arrivals.vm
@@ -3,14 +3,14 @@
         <h3>Hi ${user.loginName}, </h3>
 
         <div>
-            We are happy to notify you that new article <b>${journal.name}</b> was added to <b>${journal.category.name}</b> category!
+            We are happy to notify you that new article <b>${journal.name}</b> was added to the <b>${journal.category.name}</b> category!
         </div>
 
         <br/>
 
         <div>
             Have a nice day! <br/>
-            <b>Your News service<b>
+            <b>Your News service</b>
         </div>
     </body>
 </html>
