--- a/Code/src/main/resources/email-templates/digest.vm
+++ b/Code/src/main/resources/email-templates/digest.vm
@@ -5,7 +5,7 @@
         <div>
             We are happy to notify you that since last digest email we added new articles! <br/>
             #foreach( $journal in $journals )
-            <b>Category:<b/> ${journal.category.name}</b> <b>Name:<b/>${journal.name}
+            <b>Category:</b> ${journal.category.name} <b>Name:</b>${journal.name} <br/>
             #end
 
         </div>
